<resources>
    <string name="app_name">SmartCities</string>
    <string name="login_title">欢迎登录</string>
    <string name="login_bt">登录</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_default">123456</string>
    <string name="username_default">dqx</string>
    <string name="hard_loading">努力加载中…</string>
    <string name="lawyer_consultation">律师咨询</string>
    <string name="search_hint">搜索律师</string>
    <string name="todo">TODO</string>


    <string name="lay_speciality">法律专长：%s</string>
    <string name="lay_consult_count">咨询人数：%d</string>
    <string name="lay_service_count">服务次数：%d</string>
</resources>