<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dp_20" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/dp_50"
        android:layout_height="0dp"
        android:scaleType="center"
        android:src="@drawable/mb_mobile_back_black"
        app:layout_constraintBottom_toBottomOf="@id/guideline7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline3" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="律师姓名"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline7"
        app:layout_constraintLeft_toRightOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="@id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dp_80" />


    <!-- 头像 -->
    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/dp_80"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp_20"
        android:src="@drawable/temp_photo"
        app:layout_constraintBottom_toBottomOf="@id/tv_service_count"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_speciality" />


    <TextView
        android:id="@+id/tv_speciality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/lay_speciality"
        android:textColor="@color/grey_text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/tv_consult_count"
        app:layout_constraintLeft_toRightOf="@id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/guideline7" />

    <TextView
        android:id="@+id/tv_consult_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/lay_consult_count"
        android:textColor="@color/grey_text_color"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_speciality"
        app:layout_constraintTop_toBottomOf="@id/tv_speciality" />

    <TextView
        android:id="@+id/tv_service_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/lay_service_count"
        android:textColor="@color/grey_text_color"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_speciality"
        app:layout_constraintTop_toBottomOf="@id/tv_consult_count" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_service_count"
        app:tabGravity="fill"
        app:tabMode="fixed" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bt_free_consult"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/bt_free_consult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:padding="@dimen/dp_5"
        android:text="免费咨询"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
